--- a/ocaml/bin/dune
+++ b/ocaml/bin/dune
@@ -1,4 +1,10 @@
+; More information on specifying executables can be found in the Dune documentation:
+;
+; - https://dune.readthedocs.io/en/stable/concepts.html#executables
+; - https://dune.readthedocs.io/en/stable/dune-files.html#executable
+
 (executable
- (public_name ocaml)
  (name main)
- (libraries ocaml))
+ (public_name hello)
+ (package hello)
+ (libraries hello))
