--- a/ocaml/dune-project
+++ b/ocaml/dune-project
@@ -1,26 +1,13 @@
-(lang dune 3.12)
+(lang dune 3.4)
+(name hello)
+(license MIT-0)
 
-(name ocaml)
-
+; https://dune.readthedocs.io/en/stable/opam.html#generating-opam-files
 (generate_opam_files true)
 
-(source
- (github username/reponame))
+(cram enable)
 
-(authors "Author Name")
-
-(maintainers "Maintainer Name")
-
-(license LICENSE)
-
-(documentation https://url/to/documentation)
-
+; https://dune.readthedocs.io/en/stable/concepts.html#package-specification
 (package
- (name ocaml)
- (synopsis "A short synopsis")
- (description "A longer description")
- (depends ocaml dune)
- (tags
-  (topics "to describe" your project)))
-
-; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
+ (name hello)
+ (synopsis "Friendly greetings"))
