--- a/ocaml/lib/dune
+++ b/ocaml/lib/dune
@@ -1,2 +1,11 @@
+; More information on specifying libraries can be found in the Dune documentation:
+;
+; - https://dune.readthedocs.io/en/stable/concepts.html#libraries
+; - https://dune.readthedocs.io/en/stable/dune-files.html#library
+
 (library
- (name ocaml))
+ (name hello)
+ (package hello))
+
+(documentation
+ (package hello))
