--- a/rust/bindgen/Cargo.toml
+++ b/rust/bindgen/Cargo.toml
@@ -1,12 +1,10 @@
 [package]
-name = "doggo"
-description = "A demo."
-homepage = "hoverbear.org"
+name = "bindgen"
+description = "a demo."
 version = "0.1.0"
-authors = ["Ana Hobden <operator@hoverbear.org>"]
 edition = "2018"
 
 [dependencies]
 
 [build-dependencies]
-bindgen = "0.53.1"
+bindgen = "0.*"
