--- a/rust/ble/Cargo.toml
+++ b/rust/ble/Cargo.toml
@@ -4,3 +4,9 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+anyhow = "1.0.98"
+btleplug = { version = "0.11.8", features = ["serde"] }
+futures = "0.3.31"
+futures-util = "0.3.31"
+pretty_env_logger = "0.5.0"
+tokio = { version = "1.46.1", features = ["full"] }
