feat: import axum example using postgres

--- a/rust/axum/Cargo.toml
+++ b/rust/axum/Cargo.toml
@@ -1,6 +1,11 @@
 [package]
-name = "axum"
+name = "axum-pg"
 version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+axum = "0.8.8"
+sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio"] }
+tokio = { version = "1.49.0", features = ["full", "macros"] }
+tracing = "0.1.44"
+tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
