feat: some simple get and post stuff

--- a/rust/axum/Cargo.toml
+++ b/rust/axum/Cargo.toml
@@ -4,7 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-axum = "0.8.8"
+axum = { version = "0.8.8", features = ["json"] }
+serde = { version = "1", features = ["derive"] }
 sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio"] }
 tokio = { version = "1.49.0", features = ["full", "macros"] }
 tracing = "0.1.44"
